<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_search"
        android:shortcutShortLabel="@string/search_short"
        android:shortcutLongLabel="@string/search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.kartly.ecommerce"
            android:targetClass="com.kartly.ecommerce.MainActivity"
            android:data="campconnectus://search" />
    </shortcut>
    
    <shortcut
        android:shortcutId="orders"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_view"
        android:shortcutShortLabel="@string/orders_short"
        android:shortcutLongLabel="@string/orders_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.kartly.ecommerce"
            android:targetClass="com.kartly.ecommerce.MainActivity"
            android:data="campconnectus://orders" />
    </shortcut>
    
    <shortcut
        android:shortcutId="cart"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:shortcutShortLabel="@string/cart_short"
        android:shortcutLongLabel="@string/cart_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.kartly.ecommerce"
            android:targetClass="com.kartly.ecommerce.MainActivity"
            android:data="campconnectus://cart" />
    </shortcut>
    
    <shortcut
        android:shortcutId="wallet"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_manage"
        android:shortcutShortLabel="@string/wallet_short"
        android:shortcutLongLabel="@string/wallet_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.kartly.ecommerce"
            android:targetClass="com.kartly.ecommerce.MainActivity"
            android:data="campconnectus://wallet" />
    </shortcut>
</shortcuts>
